--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang = "en">
   <head>
     <meta charset = "UTF-8">
-    <script src = "script.js"></script>
-    <link rel = "stylesheet" href = "styles.css"
+    <script src = "script.js" defer></script>
+    <link rel = "stylesheet" href = "styles.css">
     <title>Etch-a-sketch</title>
   </head>
   <body>
+    <button class = "setSize">Set Grid Pixels</button>
     <div class = "container">  </div>
   </body>
 </html>
